--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.0.0",
     "@types/webpack-env": "^1.15.1",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.0-alpha.11",
+    "@typescript-eslint/parser": "^4.0.0-alpha.11",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
@@ -38,15 +38,15 @@
     "compression-webpack-plugin": "^3.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0-rc.0",
     "eslint-config-alloy": "^3.6.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^0.0.0-d7382b6c4",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-react": "^7.8.0-rc.0",
+    "eslint-plugin-react-hooks": "^4.1.0-rc.0",
     "file-loader": "^5.1.0",
     "fs": "^0.0.1-security",
     "highlight.js": "^9.18.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.14",
     "jest": "^25.1.0",
     "marked": "^0.8.0",
     "nodemon": "^2.0.2",
@@ -55,21 +55,22 @@
     "style-loader": "^1.1.3",
     "svg-sprite-loader": "^4.2.1",
     "ts-node": "^8.6.2",
-    "typescript": "^3.8.2",
+    "typescript": "^3.9.7",
     "typescript-eslint": "^0.0.1-alpha.0",
-    "typescript-plugin-styled-components": "^1.4.4",
+    "typescript-plugin-styled-components": "^1.2.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
-    "webpack": "^4.41.6",
+    "webpack": "^5.0.0-beta.25",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
     "workbox-webpack-plugin": "^5.1.1"
   },
   "dependencies": {
     "@types/qs": "^6.9.1",
     "@types/shortid": "^0.0.29",
+    "@types/webpack": "^4.41.21",
     "koa-router": "^8.0.8",
     "koa2": "^2.0.0-alpha.7",
     "lowdb": "^1.0.0",
